tests/ui/lint/snapshots/conflicting_case_transforms.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Conflicting case transforms
   ╭─[test.lis:2:1]
 1 │ 
 2 │ #[json(snake_case, camel_case)]
   · ───────────────┬───────────────
   ·                ╰── only one case transform per tag
 3 │ pub struct User {
   ╰────
  help: Choose either `snake_case` or `camel_case`, not both · code: [attribute.conflicting_case_transforms]
