tests/ui/lint/snapshots/constant_cast_overflow_bitwise_not.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Constant conversion overflow
   ╭─[test.lis:3:11]
 2 │ fn main() {
 3 │   let _ = (^0) as uint8
   ·           ──────┬──────
   ·                 ╰── constant `-1` overflows `uint8`
 4 │ }
   ╰────
  help: This expression always evaluates to `-1`, and `uint8` must be in range `0` to `255` · code: [infer.constant_conversion_overflow]
