tests/ui/lint/snapshots/constant_cast_overflow_escaped_rune_literal.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Constant conversion overflow
   ╭─[test.lis:3:11]
 2 │ fn main() {
 3 │   let _ = '\xFF' as int8
   ·           ───────┬──────
   ·                  ╰── constant `255` overflows `int8`
 4 │ }
   ╰────
  help: This expression always evaluates to `255`, and `int8` must be in range `-128` to `127` · code: [infer.constant_conversion_overflow]
