tests/ui/lint/snapshots/constant_cast_overflow_newtype_target.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Constant conversion overflow
   ╭─[test.lis:5:11]
 4 │ fn main() {
 5 │   let _ = 300 as Small
   ·           ──────┬─────
   ·                 ╰── constant `300` overflows `Small`
 6 │ }
   ╰────
  help: This expression always evaluates to `300`, and `Small` must be in range `-128` to `127` · code: [infer.constant_conversion_overflow]
